# rust-bare-metal-rpi3

./: .gitignore  Cargo.toml  IDEA.md  TODO.md  flake.nix
.cargo/: config.toml
bsp_raspi3b1_2/: Cargo.toml  build.rs
bsp_raspi3b1_2/src/: boot.rs  console.rs  cpu.rs  errors.rs  gpio.rs  init.rs  irq.rs  kernel.ld  lib.rs  mailboxes.rs  memory.rs  screen.rs  sync.rs  timer.rs
bsp_raspi3b1_2/src/cpu/: exception.rs
bsp_raspi3b1_2/src/drivers/: gpio.rs  mod.rs  spi.rs  timer.rs  uart.rs
chainloader/: Cargo.toml
chainloader-client/: Cargo.toml  build.rs
chainloader-client/src/: main.rs
chainloader-server/: Cargo.toml
chainloader-server/src/: main.rs
chainloader/src/: main.rs
code_samples/: call_rust_function_asm.rs  gpio_expand_bitfield.rs  gpio_expand_structs.rs
code_samples/ideas/: filters.rs  instrument.rs  interface.rs  live.rs  mainloop.rs  oscillators.rs
execmain/: Cargo.toml  build.rs
execmain/src/: main.rs
src/: main.rs
