[package]
name = "jam_helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jam_helper"
test = false
bench = false

[dependencies]
bsp_raspi3b1_2 = { path = "./bsp_raspi3b1_2" }

[build-dependencies]
bsp_raspi3b1_2 = { path = "./bsp_raspi3b1_2", features = ["builder"] }

[workspace]
members = [
  "chainloader"
]
