[workspace]
resolver = "2"
members = [
  "chainloader-client",
  "chainloader-server",
  "bsp_raspi3b1_2",
  "execmain"
]

[workspace.dependencies]
bsp_raspi3b1_2 = { path = "./bsp_raspi3b1_2" }
aarch64-cpu = "9.3.1"
tock-registers = "0.8.1"
clap = "4.4.2"
serialport = "4.2.2"
linked_list_allocator = "0.10.5"
