[package]
name = "jam_helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jam_helper"
test = false
bench = false

[dependencies]
bsp_raspi3b1_2 = { workspace = true }
aarch64-cpu = { workspace = true }
tock-registers = { workspace = true }

[profile.release]
opt-level=3
strip=true
incremental=false
lto=true
codegen-units = 1
panic = "abort"
